--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -9,6 +9,10 @@ hero:
       link: /getting-started/quick-start
       icon: right-arrow
       variant: primary
+    - text: Live Demos
+      link: https://demo.useflow.sh
+      icon: rocket
+      variant: secondary
     - text: View on GitHub
       link: https://github.com/useflow-sh/useflow
       icon: external
@@ -221,9 +225,14 @@ No manual state management, no localStorage code, no confusing navigation logic 
     href="/getting-started/why-useflow"
   />
   <LinkCard
-    title="Examples"
+    title="Live Demos"
+    description="Try interactive examples in your browser"
+    href="https://examples.useflow.sh"
+  />
+  <LinkCard
+    title="Recipes"
     description="Browse recipes with production-ready patterns"
-    href="/recipes/onboarding"
+    href="/recipes/"
   />
   <LinkCard
     title="API Reference"
